Normal, Fire, and Centralized now implemented. Still some jank relating to responsiveness, but generally operating.